# astrometry.net_win

./: .gitignore  CMakeLists_debug.txt  INSTALL_IMAGEMAGICK.md  README_USAGE.md  check-missing-dlls.bat
catalogs/: generate_openngc.bat  openngc-entries.csv  openngc-names-clean.csv  openngc-names-final.c  openngc-names.csv  test.csv  usnob.c
etc/: astrometry.cfg
include/astrometry/: an-endian.h  os-features-config.h
plot/: plotstuff.c  plotxy.c
qfits-an/: anqfits.c  qfits_memory.c  qfits_time.c  qfits_tools.c
solver/: augment-xylist.c  build-index.c  codetree.c  cut-table.c  engine-main.c  engine.c  hpquads.c  onefield.c  resort-xylist.c  solve-field.c  solvedfile.c  startree.c  unpermute-quads.c  unpermute-stars.c  verify.c
util/: an-fitstopnm.c  an-pnmtofits.c  bl.c  cairoutils.c  errors.c  fileutils.c  fitsbin.c  fitsioutils.c  fitstable.c  ioutils.c  quadfile.c  tabsort.c  tic.c
win/: CMakeLists.txt  INSTALLATION_CHECKLIST.txt  QUICK_START.md  README.md  README_WINDOWS_SETUP.md  build.bat  check_installation.bat  check_simple.bat  copy_netpbm_tools.cmake  copy_tools.bat  debug_axy.c  debug_cfitsio.c  debug_fits.c  debug_qfits_detailed.c  image2pnm.bat  image2pnm.c  mman.c  mman.h  removelines.c  test-find-executable.c  test_anqfits.c  test_color_debug.c  test_color_fix.c  test_dsigma.c  test_fits_read.c  test_png_colors.c  uniformize.c
